<resources>
    <string name="app_name">Cards</string>
    <string name="cards">Cards</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="start">Start</string>
    <string name="add_word">add word</string>
    <string name="amount_of_days">0</string>
    <string name="flame_description">Flame as addition to number of days</string>
    <string name="origin">Origin</string>
    <string name="translated">Translated</string>
    <string name="ivOrigin_description">Arrow to emphasise the origin word</string>
    <string name="title_activity_update">UpdateActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="iv_arrow_description">Shows which language is being translated from which language</string>
    <string name="add">Add</string>
    <string name="unknown_error">something went wrong</string>
    <string name="delete">Delete</string>
    <string name="update">Update</string>
    <string name="all_caught_up">All Caught Up!</string>
    <string name="know">Know</string>
    <string name="repeat">Repeat</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="registration">Registration</string>
    <string name="saving_cards">Sign In to save your cards if you decide to uninstall the app</string>
    <string name="create_an_account">Create an account to save your cards if you decide to uninstall the app</string>
    <string name="sign_up">Sign Up</string>
    <string name="sign_in">Sign In</string>
    <string name="notification">Notification</string>
    <string name="welcome">Welcome,</string>
    <string name="already_have_an_account">Already have an account?</string>
    <string name="notice_text">Let\'s learn a few words!</string>
    <string name="convert_text_to_speech">Convert text to speech</string>
    <string name="hint_where_to_swipe">Hint where to swipe</string>
    <string name="notification_title">Hi! It\'s Cards</string>
    <string name="notification_text">Let\'s learn words today!</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="account_has_been_created">Account has been created</string>
    <string name="something_went_wrong">Something went wrong</string>
    <string name="welcome_back">Welcome</string>
    <string name="icon_logout">icon logout</string>
    <string name="icon_person">icon person</string>
    <string name="logout">Logout</string>
    <string name="find_a_card">Find a card &#8230;</string>
    <string name="user">User</string>
    <string name="please_enter_a_valid_email_address">Please enter a valid email address</string>
    <string name="email_can_t_be_empty">The email field cannot be empty</string>
    <string name="incorrect_credentials">Incorrect credentials</string>
    <string name="password_can_t_be_empty">Password can\'t be empty</string>
    <string name="the_email_is_too_short">The email is too short</string>
    <string name="the_password_is_too_short">The password is too short</string>
    <string name="passwords_don_t_match">Passwords don\'t match</string>
    <string name="the_password_must_contain_at_least_1_special_char">The password must contain at least 1 special char</string>
    <string name="the_password_must_contain_at_least_1_uppercase_letter">The password must contain at least 1 uppercase letter</string>
    <string name="the_password_must_contain_at_least_1_number">The password must contain at least 1 number</string>
    <string name="the_confirmed_password_can_t_be_empty">The confirmed password can\'t be empty</string>
    <string name="enter_text_to_translate">Enter text to translate</string>
    <string name="translating">Translating&#8230;</string>
    <string name="failed_to_add_a_card">Failed to add a card</string>
    <string name="incorrect_field">Incorrect field</string>
    <string name="updated">updated</string>
    <string name="deleted">deleted</string>
    <string name="added">added</string>
    <string name="card_has_been">Card has been</string>
    <string name="failed_to_synchronize_data">failed to synchronize data</string>
    <string name="failed_to_perform_automatic_translation">Failed to perform automatic translation</string>
    <string name="your_amount">Your amount: $%s</string>
    <string name="donate">Donate</string>
    <string name="donate_now">Donate Now</string>
    <string name="one_dollar">$1</string>
    <string name="five_dollars">$5</string>
    <string name="ten_dollars">$10</string>
    <string name="twenty_dollars">$20</string>
    <string name="or">or</string>
    <string name="tape_your_amount">Tape your amount</string>
    <string name="btn_continue">Continue</string>
    <string name="example_of_use">Example of use (optional)</string>
</resources>