<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.HomeFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <Button
            android:id="@+id/btnStartLearning"
            android:layout_width="140dp"
            android:layout_height="80dp"
            android:text="@string/start"
            android:textSize="24sp"
            app:layout_constraintBottom_toTopOf="@+id/btnAddWord"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.56" />

        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/btnAddWord"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:clickable="true"
            android:src="@drawable/iv_add"
            android:contentDescription="@string/add_word"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:focusable="true" />

        <ImageView
            android:id="@+id/ivDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/baseline_local_fire_department_24"
            android:contentDescription="@string/flame_description"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvDays"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:text="@string/amount_of_days"
            android:textStyle="bold"
            android:textSize="24sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivDays"
            app:layout_constraintEnd_toStartOf="@+id/ivDays"
            app:layout_constraintTop_toTopOf="@+id/ivDays" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>