<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayoutSettings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.fragments.SettingsFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/tvUserEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/email"
            android:textSize="24sp"
            android:textStyle="italic"
            app:layout_constraintEnd_toEndOf="@+id/cardViewAvatar"
            app:layout_constraintStart_toStartOf="@+id/cardViewAvatar"
            app:layout_constraintTop_toBottomOf="@+id/cardViewAvatar" />

        <ImageView
            android:id="@+id/ivNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/notification"
            android:src="@drawable/iv_notifications"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/ivLogOut" />

        <androidx.appcompat.widget.SwitchCompat
            android:id="@+id/switchNotification"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/notification"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivNotification"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.067"
            app:layout_constraintStart_toEndOf="@+id/ivNotification"
            app:layout_constraintTop_toTopOf="@+id/ivNotification"
            app:layout_constraintVertical_bias="0.437"
            app:switchPadding="8dp" />

        <ImageView
            android:id="@+id/ivLogOut"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="24dp"
            android:contentDescription="@string/icon_logout"
            android:src="@drawable/iv_log_out"
            app:layout_constraintEnd_toEndOf="@+id/tvUserEmail"
            app:layout_constraintStart_toEndOf="@+id/tvSettingsLogout"
            app:layout_constraintTop_toBottomOf="@+id/tvUserEmail" />

        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardViewAvatar"
            android:layout_width="128dp"
            android:layout_height="128dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="16dp"
            android:elevation="8dp"
            app:cardCornerRadius="48dp"
            app:layout_constraintBottom_toTopOf="@+id/tvUserEmail"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvSettingsWelcome"
            app:strokeColor="#B796E8"
            app:strokeWidth="2dp">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/person_128"
                android:contentDescription="@string/icon_person"/>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:id="@+id/tvSettingsWelcome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="64dp"
            android:text="@string/welcome_back"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tvSettingsLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/logout"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/ivLogOut"
            app:layout_constraintEnd_toStartOf="@+id/ivLogOut"
            app:layout_constraintStart_toStartOf="@+id/tvUserEmail"
            app:layout_constraintTop_toTopOf="@+id/ivLogOut" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>